# binary-stream-broker

./: .gitignore  ARCHITECTURE.md  COMMIT_MESSAGE.txt  PIPELINE_KNOWLEDGE.md  README.md  pipeline.txt
ingest-server/: .dockerignore  .env.example  .gitignore.docker  Caddyfile  Cargo.toml  Dockerfile  Dockerfile.caddy  README.docker.md  README.md  docker-compose.override.yml.example  docker-compose.yml  docker-run.sh  generate-certs.sh  nginx-https.conf.example  run.sh  setup-caddy.sh
ingest-server/certs/: server.crt  server.key
ingest-server/src/: main.rs
producer/: .env.example  README.md  bounding_boxes.example.json  main.py  requirements.txt  run.sh  test_producer.py
web-client/: README.md  index.html  run.sh  server.py  stream-player.js
